src/objects/OrderApi__Badge__c.object
<CustomObject>
    <description>Badges are assigned to Contacts either automatically (Badge Workflow) or manually. Badges can enable Contacts for special Price Rules - as well as permission to read, update, or delete certain content types.</description>
    <fields>
        <fullName>OrderApi__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the assigned Account.</description>
        <inlineHelpText>Link to the assigned Account.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Badges</relationshipLabel>
        <relationshipName>Badges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated ** Badges can be auto-assigned to Contacts based on &quot;Assignment&quot; the link to the &quot;Assignment&quot; record is used to auto-unassign the badge when the Contact has been &quot;Unassigned&quot;.</description>
        <inlineHelpText>** System Calculated ** Badges can be auto-assigned to Contacts based on &quot;Assignment&quot; the link to the &quot;Assignment&quot; record is used to auto-unassign the badge when the Contact has been &quot;Unassigned&quot;.</inlineHelpText>
        <label>Assignment</label>
        <referenceTo>OrderApi__Assignment__c</referenceTo>
        <relationshipLabel>Badges</relationshipLabel>
        <relationshipName>Badges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Awarded_Date__c</fullName>
        <description>** System Calculated Required Override ** The date the Badge Type was assigned to the Contact. Defaults to today&apos;s date if no other value provided on record creation.</description>
        <inlineHelpText>** System Calculated Required Override ** The date the Badge Type was assigned to the Contact. Defaults to today&apos;s date if no other value provided on record creation.</inlineHelpText>
        <label>Awarded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Badge_Description__c</fullName>
        <description>** System Calculated ** Value of the &quot;Short Description&quot; field for the linked Badge Type.</description>
        <formula>OrderApi__Badge_Type__r.OrderApi__Short_Description__c</formula>
        <inlineHelpText>** System Calculated ** Value of the &quot;Short Description&quot; field for the linked Badge Type.</inlineHelpText>
        <label>Badge Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Badge_Type_Icon__c</fullName>
        <description>** System Calculated ** Icon with link anchored by the Badge Type Name to the Badge Type assigned to the Contact.</description>
        <formula>IF(OrderApi__Badge_Type__c != null, OrderApi__Badge_Type__r.OrderApi__Icon__c, &quot;Image Not Available&quot;) &amp; &quot; &quot; &amp; HYPERLINK(LEFT($Api.Enterprise_Server_URL_410 , FIND(&apos;/services&apos;, $Api.Enterprise_Server_URL_410)) &amp; Id, OrderApi__Badge_Type__r.Name, &quot;_tab&quot;)</formula>
        <inlineHelpText>** System Calculated ** Icon with link anchored by the Badge Type Name to the Badge Type assigned to the Contact.</inlineHelpText>
        <label>Badge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Badge_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Badge Type</label>
        <referenceTo>OrderApi__Badge_Type__c</referenceTo>
        <relationshipLabel>Badges</relationshipLabel>
        <relationshipName>Badges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Badge_Workflow__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated ** Link to related Badge Workflow that auto-assigned the Badge Type to the Contact.</description>
        <inlineHelpText>** System Calculated ** Link to related Badge Workflow that auto-assigned the Badge Type to the Contact.</inlineHelpText>
        <label>Badge Workflow</label>
        <referenceTo>OrderApi__Badge_Workflow__c</referenceTo>
        <relationshipLabel>Assigned Badges</relationshipLabel>
        <relationshipName>Badges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the assigned Contact.</description>
        <inlineHelpText>Link to the assigned Contact.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Badges</relationshipLabel>
        <relationshipName>Badges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Engagement_Score__c</fullName>
        <description>The numerical engagement score assigned for receiving the badge.</description>
        <inlineHelpText>The numerical engagement score assigned for receiving the badge.</inlineHelpText>
        <label>Engagement Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Expired_Date__c</fullName>
        <description>** System Calculated ** The date the Badge Type was un-assigned from the Contact.</description>
        <inlineHelpText>** System Calculated ** The date the Badge Type was un-assigned from the Contact.</inlineHelpText>
        <label>Expired Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When checked, the Badge is considered &quot;Awarded&quot; and &quot;Active&quot; and will be considered when calculating any permission or pricing configurations related to the linked Badge Type. Defaults checked.</description>
        <inlineHelpText>When checked, the Badge is considered &quot;Awarded&quot; and &quot;Active&quot; and will be considered when calculating any permission or pricing configurations related to the linked Badge Type. Defaults checked.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated ** Link to related Item that was related to the Assignment or the Sales Order Line that invoked the workflow that auto-assigned the Badge Type to the Contact.</description>
        <inlineHelpText>** System Calculated ** Link to related Item that was related to the Assignment or the Sales Order Line that invoked the workflow that auto-assigned the Badge Type to the Contact.</inlineHelpText>
        <label>Item</label>
        <referenceTo>OrderApi__Item__c</referenceTo>
        <relationshipLabel>Badges (DO NOT DISPLAY)</relationshipLabel>
        <relationshipName>Badges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sales_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated ** Link to related Sales Order Line that invoked the workflow that auto-assigned the Badge Type to the Contact.</description>
        <inlineHelpText>** System Calculated ** Link to related Sales Order Line that invoked the workflow that auto-assigned the Badge Type to the Contact.</inlineHelpText>
        <label>Sales Order Line</label>
        <referenceTo>OrderApi__Sales_Order_Line__c</referenceTo>
        <relationshipLabel>Badges</relationshipLabel>
        <relationshipName>Badges</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Badge</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Badge ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Badges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>